--- a/investments.html
+++ b/investments.html
@@ -78,7 +78,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header mb-5">
+            <div class="container-xxl py-5 bg-primary hero-header">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
@@ -121,14 +121,18 @@
 
 
         <!-- Comparison Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5" style="background-color: #162411;">
             <div class="container px-lg-5">
 
                 <div class="row">
-                    <div class="col-lg-12 text-center "> <h1 class="mb-3">INVESTMENT</h1></div>
-                    <div class=" col-lg-6   text-center mx-auto  pb-4 wow fadeInUp"
-                        data-wow-delay="0.1s" style="max-width: 600px;">
-                        <p class="text-lg-start">Investing in Raja Roy Promotors' Real Estate Open Mango Plots presents a unique
+                    <div class="col-lg-12 text-center ">
+                        <h1 class="mb-3 text-white">INVESTMENT</h1>
+                    </div>
+                    <div class=" col-lg-6   text-center mx-auto  pb-4 wow fadeInUp" data-wow-delay="0.1s"
+                        style="max-width: 600px;">
+                        <p class="text-lg-start text-white">Investing in Raja Roy Promotors' Real Estate Open Mango
+                            Plots presents
+                            a unique
                             opportunity to partake in a venture that seamlessly merges profitability with the allure of
                             nature. These plots not only offer the potential for substantial returns on investment but
                             also promise a lifestyle infused with tranquility and natural beauty. With meticulous
@@ -143,8 +147,22 @@
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/investment.jpg">
                     </div>
-                    <div class="col-lg-12">
-                        <p> That considers long-term trends, potential risks, and opportunities for growth One promising avenue is sustainable land management practices, which not only enhance the environmental value of your plots but also contribute to their long-term productivity and profitability. Implementing practices such as regenerative agriculture, agroforestry, and carbon farming can improve soil health, sequester carbon, and enhance biodiversity, ultimately increasing the resilience of your plots to climate change and other environmental stressors. By prioritizing sustainable land management, you not only position your plots for long-term viability but also align your investments with the growing demand for ethically sourced and environmentally friendly products, thereby mitigating risks associated with changing consumer preferences and regulatory requirements.Furthermore, diversifying your investments across multiple sectors related to your plots can help spread risk and maximize returns. Consider allocating funds towards renewable energy projects such as solar or wind farms, which can complement your land use while providing additional sources of income. Investing in infrastructure development, such as irrigation systems or on-site processing facilities, can also enhance the value and productivity of your plots. </p>
+                    <div class="col-lg-12 text-white">
+                        <p> That considers long-term trends, potential risks, and opportunities for growth One promising
+                            avenue is sustainable land management practices, which not only enhance the environmental
+                            value of your plots but also contribute to their long-term productivity and profitability.
+                            Implementing practices such as regenerative agriculture, agroforestry, and carbon farming
+                            can improve soil health, sequester carbon, and enhance biodiversity, ultimately increasing
+                            the resilience of your plots to climate change and other environmental stressors. By
+                            prioritizing sustainable land management, you not only position your plots for long-term
+                            viability but also align your investments with the growing demand for ethically sourced and
+                            environmentally friendly products, thereby mitigating risks associated with changing
+                            consumer preferences and regulatory requirements.Furthermore, diversifying your investments
+                            across multiple sectors related to your plots can help spread risk and maximize returns.
+                            Consider allocating funds towards renewable energy projects such as solar or wind farms,
+                            which can complement your land use while providing additional sources of income. Investing
+                            in infrastructure development, such as irrigation systems or on-site processing facilities,
+                            can also enhance the value and productivity of your plots. </p>
                     </div>
 
 
@@ -157,7 +175,7 @@
             <div class="container ">
                 <div class="row ">
                     <div class="col-lg-12 text-center">
-                        <h4>Investments</h4>
+                        <h4 class="mt-4">Investments</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/INVESTMENT-PLOTS.jpg" alt="">
@@ -168,117 +186,117 @@
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/inestment.jpg" alt="">
                     </div>
-                    <
-                    </div>
-                    </div>
-                    </div>
+                    < </div>
+                </div>
+            </div>
 
-                    <style>
-                        .gallery img {
-                            width: 100%;
-                        }
-                    </style>
-        <!-- Footer Start -->
-        <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+            <style>
+                .gallery img {
+                    width: 100%;
+                }
+            </style>
+            <!-- Footer Start -->
+            <div class="container-fluid  text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
 
-            <div class="container pt-1 pb-4 px-lg-5">
-                <div class="row gy-5 gx-4 pt-5">
-                    <div class="col-lg-2 col-md-12">
-                        <div class="p-2 footer-logo">
-                            <img src="./img/logo1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-5 col-md-12">
-                        <div class="row gy-5 g-4">
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our links</h5>
-                                <a class="btn btn-link" href="/">Home </a>
-                                <a class="btn btn-link" href="./about.html">About </a>
-
-                                <a class="btn btn-link" href="./gallery.html">Gallery</a>
-                                <a class="btn btn-link" href="./contact.html">Contact</a>
-
-                            </div>
-                            <div class="col-md-6">
-                                <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                                <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
-                                <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
-                                <a class="btn btn-link" href="./investments.html">Investment</a>
-                                <a class="btn btn-link" href="">Projects</a>
-
+                <div class="container pt-1 pb-4 px-lg-5">
+                    <div class="row gy-5 gx-4 pt-5">
+                        <div class="col-lg-2 col-md-12">
+                            <div class="p-2 footer-logo">
+                                <img src="./img/logo1.png" alt="">
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4 col-lg-5">
-                        <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
-                            MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
-                                target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
-                                    target="_blank"></i></a>
+                        <div class="col-lg-5 col-md-12">
+                            <div class="row gy-5 g-4">
+                                <div class="col-md-6">
+                                    <h5 class="fw-bold text-white mb-4">Our links</h5>
+                                    <a class="btn btn-link" href="/">Home </a>
+                                    <a class="btn btn-link" href="./about.html">About </a>
 
-                            <a class="btn btn-outline-light btn-social"
-                                href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                    <a class="btn btn-link" href="./gallery.html">Gallery</a>
+                                    <a class="btn btn-link" href="./contact.html">Contact</a>
+
+                                </div>
+                                <div class="col-md-6">
+                                    <h5 class="fw-bold text-white mb-4">Our Services</h5>
+                                    <a class="btn btn-link" href="./open-plots.html">Open Plots</a>
+                                    <a class="btn btn-link" href="./farm-lands.html">Farm-Lands</a>
+                                    <a class="btn btn-link" href="./investments.html">Investment</a>
+                                    <a class="btn btn-link" href="">Projects</a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-5">
+                            <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
+                            <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
+                                MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
+                            <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
+                            <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
+                            <div class="d-flex pt-2">
+                                <a class="btn btn-outline-light btn-social" href="https://twitter.com/RR_Pramotors"
+                                    target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-light btn-social"
+                                    href="https://www.facebook.com/RajaRoyPramotors21" target="_blank"><i
+                                        class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"
+                                        target="_blank"></i></a>
+
+                                <a class="btn btn-outline-light btn-social"
+                                    href="https://www.instagram.com/raja_roy_pramotors/" target="_blank"><i
+                                        class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="container px-lg-5">
+                    <div class="copyright">
+                        <div class="row">
+                            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                                &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
+
+
+                                Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The
+                                    Patterns
+                                    Company</a>
+                            </div>
+                            <div class="col-md-6 text-center text-md-end">
+                                <div class="footer-menu">
+                                    <a href="/">Home</a>
+                                    <a href="">Cookies</a>
+                                    <a href="">Help</a>
+                                    <a href="">FQAs</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="container px-lg-5">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved.
+            <!-- Footer End -->
 
-
-                            Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns
-                                Company</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="/">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="whatsapp">
+                <a href="https://wa.me/+918885667888" target="_blank">
+                    <h4 class="vertical">Chat With Us!</h4>
+                </a>
             </div>
-        </div>
-        <!-- Footer End -->
 
-        <div class="whatsapp">
-            <a href="https://wa.me/+918885667888" target="_blank">
-                <h4 class="vertical">Chat With Us!</h4>
-            </a>
+
+            <!-- Back to Top -->
+            <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
         </div>
 
+        <!-- JavaScript Libraries -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="lib/wow/wow.min.js"></script>
+        <script src="lib/easing/easing.min.js"></script>
+        <script src="lib/waypoints/waypoints.min.js"></script>
+        <script src="lib/counterup/counterup.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-secondary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-    </div>
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+        <!-- Template Javascript -->
+        <script src="js/main.js"></script>
 </body>
 
 </html>
