--- a/open-plots.html
+++ b/open-plots.html
@@ -76,7 +76,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header mb-5">
+            <div class="container-xxl py-5 bg-primary hero-header ">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
@@ -119,14 +119,18 @@
 
 
         <!-- Team Start -->
-        <div class="container-xxl py-3">
+        <div class="container-xxl py-3" style="background-color: #162411;">
             <div class="container px-lg-5">
 
                 <div class="row">
-                    <div class="col-lg-12 text-center mb-4"><h1>OPEN PLOTS</h1></div>
-                    <div class="col-lg-6  position-relative text-center mx-auto pb-4 wow fadeInUp"
-                        data-wow-delay="0.1s" style="max-width: 600px;">
-                        <p class="text-lg-start"> Raja Roy Promotors have unveiled a tantalizing opportunity for real estate
+                    <div class="col-lg-12 text-center mb-4">
+                        <h1 class="text-white">OPEN PLOTS</h1>
+                    </div>
+                    <div class="col-lg-6  position-relative text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s"
+                        style="max-width: 600px;">
+                        <p class="text-lg-start text-white"> Raja Roy Promotors have unveiled a tantalizing opportunity
+                            for real
+                            estate
                             enthusiasts with their latest venture, Open Mango Plots. Nestled amidst serene landscapes,
                             these plots offer not just a piece of land but a promise of tranquil living. With meticulous
                             planning and attention to detail, Raja Roy Promotors have curated these plots to cater to
@@ -136,12 +140,30 @@
                             offering a blank slate for architectural marvels or serene retreats. Raja Roy Promotors have
                             once again proven their commitment to excellence in the real estate realm with Open Mango
                             Plots, inviting individuals to carve their own piece of paradise in the embrace of nature's
-                            beauty.imagine owning open plots where you can truly immerse yourself in nature and build your dream retreat. These plots offer the perfect canvas for creating a sanctuary that harmonizes with the surrounding environment, allowing you to indulge in the tranquility and beauty of nature.</p>
+                            beauty.imagine owning open plots where you can truly immerse yourself in nature and build
+                            your dream retreat. These plots offer the perfect canvas for creating a sanctuary that
+                            harmonizes with the surrounding environment, allowing you to indulge in the tranquility and
+                            beauty of nature.</p>
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/image_team.jpg">
                     </div class="col-lg-12">
-                    <p> Whether nestled in lush forests, overlooking serene lakes, or perched atop rolling hills, these open plots provide the opportunity to design custom homes or cabins that seamlessly blend indoor and outdoor living spaces, maximizing views and natural light while minimizing environmental impact. With ample space for gardens, orchards, and outdoor amenities such as hiking trails, meditation gardens, or secluded viewpoints, these plots invite you to cultivate a lifestyle that prioritizes wellness, connection, and inspiration amidst the splendor of the great outdoors.Moreover, owning open plots allows you to embark on a journey of personal fulfillment and creative expression as you manifest your vision for your dream retreat. From eco-friendly and off-grid living solutions to innovative architectural designs that prioritize sustainability and energy efficiency, the possibilities are endless. Whether you envision a cozy cabin nestled amidst towering trees, a modern retreat with panoramic windows framing breathtaking vistas, or a rustic-chic lodge inspired by the surrounding landscape, these open plots offer the freedom to turn your dreams into reality. Embrace the opportunity to escape the hustle and bustle of city life, reconnect with nature, and create cherished memories with loved ones in a place that reflects your values, passions, and aspirations.</p>
+                    <p class="text-white"> Whether nestled in lush forests, overlooking serene lakes, or perched atop
+                        rolling hills, these
+                        open plots provide the opportunity to design custom homes or cabins that seamlessly blend indoor
+                        and outdoor living spaces, maximizing views and natural light while minimizing environmental
+                        impact. With ample space for gardens, orchards, and outdoor amenities such as hiking trails,
+                        meditation gardens, or secluded viewpoints, these plots invite you to cultivate a lifestyle that
+                        prioritizes wellness, connection, and inspiration amidst the splendor of the great
+                        outdoors.Moreover, owning open plots allows you to embark on a journey of personal fulfillment
+                        and creative expression as you manifest your vision for your dream retreat. From eco-friendly
+                        and off-grid living solutions to innovative architectural designs that prioritize sustainability
+                        and energy efficiency, the possibilities are endless. Whether you envision a cozy cabin nestled
+                        amidst towering trees, a modern retreat with panoramic windows framing breathtaking vistas, or a
+                        rustic-chic lodge inspired by the surrounding landscape, these open plots offer the freedom to
+                        turn your dreams into reality. Embrace the opportunity to escape the hustle and bustle of city
+                        life, reconnect with nature, and create cherished memories with loved ones in a place that
+                        reflects your values, passions, and aspirations.</p>
                 </div>
 
 
@@ -151,7 +173,7 @@
         <div class="container-xxl gallery">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-lg-12 text-center">
+                    <div class="col-lg-12 text-center mt-4">
                         <h4>Our Open-Plots Photos</h4>
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
@@ -172,14 +194,14 @@
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/open5.png" alt="">
                     </div>
-                    </div>
-                    </div>
-                    </div>
-                    <style>
-                        .gallery img {
-                            width: 100%;
-                        }
-                    </style>
+                </div>
+            </div>
+        </div>
+        <style>
+            .gallery img {
+                width: 100%;
+            }
+        </style>
 
         <!-- </div>
                     </div>
