--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header mb-5">
+            <div class="container-xxl py-5 bg-primary hero-header">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
@@ -120,14 +120,41 @@
 
 
         <!-- Team Start -->
-        <div class="container-xxl py-5">
-            <div class="container px-lg-5">
+        <div class="container-xxl py-5" style="background-color: #162411;">
+            <div class="container px-lg-5 text-white">
 
                 <div class="row">
-                    <div class=""col-lg-12><h1 class="mb-3 text-center">Our Projects</h1></div>
+                    <div class="" col-lg-12>
+                        <h1 class="mb-3 text-center">Our Projects</h1>
+                    </div>
                     <div class="col-lg-12 position-relative">
-                        <p class="text-lg-start"> As a leading real estate company, we pride ourselves on our track record of successfully completing diverse projects that meet and exceed the expectations of our clients. With a proven history of delivering exceptional results, we have established ourselves as trusted partners in the realm of property development. Our portfolio showcases a range of projects spanning residential, commercial, and mixed-use developments, each tailored to the unique needs and desires of our clientele.Our success lies in our unwavering commitment to excellence, innovation, and client satisfaction. From conceptualization to execution, we employ a meticulous approach that prioritizes quality craftsmanship, attention to detail, and adherence to timelines and budgets. Whether it's designing luxurious residences that epitomize elegance and sophistication, creating vibrant commercial spaces that foster growth and prosperity, or crafting dynamic mixed-use developments that enrich communities and enhance urban landscapes, we consistently strive to deliver unparalleled value and craftsmanship in every project we undertake. With our proven expertise and dedication to excellence, we stand ready to bring your vision to life and exceed your expectations in every aspect of real estate development.</p>
-                    <p class="text-lg-start">Furthermore, our success in completing diverse projects stems from our ability to adapt to evolving market trends and anticipate the changing needs of our clients. We stay at the forefront of the real estate industry by embracing innovation and leveraging cutting-edge technologies and sustainable practices. By incorporating smart design principles, energy-efficient solutions, and environmentally friendly materials, we not only create properties that enhance quality of life for occupants but also contribute to a more sustainable future. Our team of seasoned professionals, including architects, engineers, designers, and project managers, collaborate seamlessly to bring visions to reality while ensuring transparency, integrity, and open communication throughout the development process. With our proven track record of success and our unwavering commitment to excellence, we are dedicated to delivering outstanding real estate solutions that stand the test of time and exceed expectations.</p>
+                        <p class="text-lg-start"> As a leading real estate company, we pride ourselves on our track
+                            record of successfully completing diverse projects that meet and exceed the expectations of
+                            our clients. With a proven history of delivering exceptional results, we have established
+                            ourselves as trusted partners in the realm of property development. Our portfolio showcases
+                            a range of projects spanning residential, commercial, and mixed-use developments, each
+                            tailored to the unique needs and desires of our clientele.Our success lies in our unwavering
+                            commitment to excellence, innovation, and client satisfaction. From conceptualization to
+                            execution, we employ a meticulous approach that prioritizes quality craftsmanship, attention
+                            to detail, and adherence to timelines and budgets. Whether it's designing luxurious
+                            residences that epitomize elegance and sophistication, creating vibrant commercial spaces
+                            that foster growth and prosperity, or crafting dynamic mixed-use developments that enrich
+                            communities and enhance urban landscapes, we consistently strive to deliver unparalleled
+                            value and craftsmanship in every project we undertake. With our proven expertise and
+                            dedication to excellence, we stand ready to bring your vision to life and exceed your
+                            expectations in every aspect of real estate development.</p>
+                        <p class="text-lg-start">Furthermore, our success in completing diverse projects stems from our
+                            ability to adapt to evolving market trends and anticipate the changing needs of our clients.
+                            We stay at the forefront of the real estate industry by embracing innovation and leveraging
+                            cutting-edge technologies and sustainable practices. By incorporating smart design
+                            principles, energy-efficient solutions, and environmentally friendly materials, we not only
+                            create properties that enhance quality of life for occupants but also contribute to a more
+                            sustainable future. Our team of seasoned professionals, including architects, engineers,
+                            designers, and project managers, collaborate seamlessly to bring visions to reality while
+                            ensuring transparency, integrity, and open communication throughout the development process.
+                            With our proven track record of success and our unwavering commitment to excellence, we are
+                            dedicated to delivering outstanding real estate solutions that stand the test of time and
+                            exceed expectations.</p>
                     </div>
                 </div>
 
@@ -158,14 +185,14 @@
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/investment.jpg" alt="">
                     </div> -->
-                    </div>
-                    </div>
-                    </div>
-                    <style>
-                        .gallery img {
-                            width: 100%;
-                        }
-                    </style>
+                </div>
+            </div>
+        </div>
+        <style>
+            .gallery img {
+                width: 100%;
+            }
+        </style>
 
         <!-- </div>
                     </div>
