--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
                                     class="btn btn-secondary py-sm-3 px-sm-5 me-3 animated slideInLeft">Contact
                                     Us</a>
                             </div>
-                            <div class="col-lg-6 text-center text-lg-start  hero-img">
+                            <!-- <div class="col-lg-6 text-center text-lg-start  hero-img">
                                 <img class="img-fluid animated zoomIn hero-image" src="./img/coustomer_review_man2.png"
                                     alt="">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
