--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
         <div class="container" style="background-color: #162411;">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3 class="text-white">Vision</h3>
+                    <h3 class="text-white">Our Vision</h3>
                 </div>
                 <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="m-5 text-white">At Vision Real Estate, our mission is to redefine the standard of
@@ -240,7 +240,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-lg-12 py-1 m-2 wow fadeInUp" data-wow-delay="0.1s">
-                    <h3>Mission</h3>
+                    <h3>Our Mission</h3>
                 </div>
                 <div class="col-lg-6 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="m-5">At Raja Roy Promoters,our mission is to go beyond simply buying and selling
@@ -362,11 +362,13 @@
         <!-- Comparison Start -->
         <style>
             .why-us div {
-                box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.349);
+                box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.219);
+                transition: 3s all;
             }
 
             .why-us div:hover {
-                box-shadow: 3px 3px 6px #cb4154, 4px 4px 8px #cb4154;
+                box-shadow:inset 3px 3px 6px #ffd041,inset -3px -3px 6px #ffd041;
+                transform: scale(1.1);
             }
         </style>
 
@@ -376,7 +378,7 @@
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
 
-                    <h3 class="mb-1">People Say The Nicest Things</h3>
+                    <h3 class="mb-1">Customers Feedbacks</h3>
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div
