--- a/open-plots.html
+++ b/open-plots.html
@@ -76,7 +76,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header ">
+            <div class="container-xxl py-5 bg-primary hero-header-open">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
@@ -176,9 +176,7 @@
                     <div class="col-lg-12 text-center mt-4">
                         <h4>Our Open-Plots Photos</h4>
                     </div>
-                    <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/open1.png" alt="">
-                    </div>
+                   
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/open2.png" alt="">
                     </div>
@@ -189,11 +187,15 @@
                         <img src="./img/openplotimage.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/open4.png" alt="">
+                        <img src="./img/open-plots (2).jpeg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/open5.png" alt="">
+                        <img src="./img/open-plots (3).jpeg" alt="">
                     </div>
+                    <div class="col-lg-4 col-md-6 p-2">
+                        <img src="./img/open-plots (1).jpeg" alt="">
+                    </div>
+                   
                 </div>
             </div>
         </div>
