--- a/about.html
+++ b/about.html
@@ -451,8 +451,7 @@
                 <div class="row gy-5 gx-4 pt-5">
                     <div class="col-lg-2 col-md-12">
                         <div class="p-2 footer-logo">
-                            <img src="./img/logo1.png" alt="">
-                        </div>
+                            <img src="./img/logo.jpeg" alt="">                        </div>
                     </div>
                     <div class="col-lg-5 col-md-12">
                         <div class="row gy-5 g-4">
