--- a/farm-lands.html
+++ b/farm-lands.html
@@ -129,7 +129,8 @@
 
 
 
-                    <div class="col-lg-6  position-relative text-center mx-auto  pb-4 wow fadeInUp"
+
+                    <div class="col-lg-6  position-relative text-center   pb-4 wow fadeInUp"
                         data-wow-delay="0.1s" style="max-width: 600px;">
 
 
@@ -153,8 +154,8 @@
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="./img/Form-Lands.jpg">
                     </div>
-                    <div class="col-lg-12 text-white">
-                        <p>we seek to
+                    <p class="mb-1 text-lg-start text-white">we seek to
+                        
                             create a network of sustainable agricultural hubs where farm-lands serve as the foundation
                             for resilient food systems and thriving rural economies. Join us in our mission to unlock
                             the potential of farm-lands and cultivate a future where agriculture and nature coexist
@@ -198,7 +199,7 @@
                         <img src="./img/framplotsimage7.jpg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
-                        <img src="./img/treehouse.jpg" alt="">
+                        <img src="./img/farm (4).jpeg" alt="">
                     </div>
                     <div class="col-lg-4 col-md-6 p-2">
                         <img src="./img/farm2.png" alt="">
@@ -223,7 +224,7 @@
                 <div class="row gy-5 gx-4 pt-5">
                     <div class="col-lg-2 col-md-12">
                         <div class="p-2 footer-logo">
-                            <img src="./img/logo1.png" alt="">
+                            <img src="./img/logo.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-12">
