--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,7 @@
             </div>
         </nav>
 
-        <div class="container-xxl py-5 bg-primary hero-header mb-5">
+        <div class="container-xxl py-5 bg-primary hero-header-gallery mb-5">
             <div class="container my-5 py-5 px-lg-5">
                 <div class="row g-5 pt-5">
                     <div class="col-12 text-center text-lg-start">
@@ -126,32 +126,51 @@
                 <div class="col-lg-12 text-center">
                     <h4>Our Latest Photos</h4>
                 </div>
+                
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallery1.jpg" alt="">
+                    <img src="./img/Dashehari-Mango-Farming1-1024x683 1231.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallaery2.jpg" alt="">
+                    <img src="./img/farm (1).jpeg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/IMG_7874-PhotoRoom.png-PhotoRoom.png" alt="">
+                    <img src="./img/farm (7).jpeg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallery-1 anil.jpg" alt="">
+                    <img src="./img/farmplotsimage4.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/gallary- anil-2.webp" alt="">
+                    <img src="./img/framplotsimage7.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Gallery Anil9.jpg" alt="">
+                    <img src="./img/gallery3.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Gallery-anil4.jpg" alt="">
+                    <img src="./img/framplotimage6.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Gallery Anil9.jpg" alt="">
+                    <img src="./img/swimming.jpg" alt="">
                 </div>
                 <div class="col-lg-4 col-md-6 p-2">
-                    <img src="./img/Gallerey-7 anil.jpg" alt="">
+                    <img src="./img/putha mangos.jpeg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/construction1.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/construction2.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/construction3.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/open-plots (1).jpeg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/open-plots (2).jpeg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 p-2">
+                    <img src="./img/open-plots (3).jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -171,7 +190,7 @@
             <div class="row gy-5 gx-4 pt-5">
                 <div class="col-lg-2 col-md-12">
                     <div class="p-2 footer-logo">
-                        <img src="./img/logo1.png" alt="">
+                        <img src="./img/logo.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-12">
