--- a/investments.html
+++ b/investments.html
@@ -78,7 +78,7 @@
                 </div>
             </nav>
 
-            <div class="container-xxl py-5 bg-primary hero-header">
+            <div class="container-xxl py-5 bg-primary hero-header-invest">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
@@ -128,7 +128,7 @@
                     <div class="col-lg-12 text-center ">
                         <h1 class="mb-3 text-white">INVESTMENT</h1>
                     </div>
-                    <div class=" col-lg-6   text-center mx-auto  pb-4 wow fadeInUp" data-wow-delay="0.1s"
+                    <div class=" col-lg-6   text-center   pb-4 wow fadeInUp" data-wow-delay="0.1s"
                         style="max-width: 600px;">
                         <p class="text-lg-start text-white">Investing in Raja Roy Promotors' Real Estate Open Mango
                             Plots presents
@@ -202,7 +202,7 @@
                     <div class="row gy-5 gx-4 pt-5">
                         <div class="col-lg-2 col-md-12">
                             <div class="p-2 footer-logo">
-                                <img src="./img/logo1.png" alt="">
+                                <img src="./img/logo.jpeg" alt="">
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-12">
