--- a/open-plots.html
+++ b/open-plots.html
@@ -126,7 +126,7 @@
                     <div class="col-lg-12 text-center mb-4">
                         <h1 class="text-white">OPEN PLOTS</h1>
                     </div>
-                    <div class="col-lg-6  position-relative text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s"
+                    <div class="col-lg-6  position-relative text-center  pb-4 wow fadeInUp" data-wow-delay="0.1s"
                         style="max-width: 600px;">
                         <p class="text-lg-start text-white"> Raja Roy Promotors have unveiled a tantalizing opportunity
                             for real
@@ -220,7 +220,7 @@
                 <div class="row gy-5 gx-4 pt-5">
                     <div class="col-lg-2 col-md-12">
                         <div class="p-2 footer-logo">
-                            <img src="./img/logo1.png" alt="">
+                            <img src="./img/logo.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-12">
